--- a/app/src/main/res/layout/fragment_stub.xml
+++ b/app/src/main/res/layout/fragment_stub.xml
@@ -10,6 +10,6 @@
 		android:layout_height="wrap_content"
 		android:layout_gravity="center"
 		android:gravity="center"
-		android:text="Этот функционал еще не реализован"/>
+		android:text="@string/stub_fragment_functional_not_implemented"/>
 
 </FrameLayout>
