--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,21 +1,69 @@
-<LinearLayout
+<?xml version="1.0" encoding="utf-8"?>
+
+<android.support.v4.widget.DrawerLayout
+	android:id="@+id/drawer_layout"
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:tools="http://schemas.android.com/tools"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	android:orientation="vertical">
+	android:fitsSystemWindows="true">
 
-	<android.support.v7.widget.Toolbar
-		android:id="@+id/toolbar"
+	<!-- Content -->
+	<LinearLayout
+		xmlns:android="http://schemas.android.com/apk/res/android"
 		android:layout_width="match_parent"
-		android:layout_height="?attr/actionBarSize"
-		style="@style/Widget.App.ActionBar"/>
+		android:layout_height="match_parent"
+		android:orientation="vertical">
 
-	<FrameLayout
-		android:id="@+id/content_frame"
+		<android.support.v7.widget.Toolbar
+			android:id="@+id/toolbar"
+			style="@style/Widget.App.ActionBar"
+			android:layout_width="match_parent"
+			android:layout_height="?attr/actionBarSize"/>
+
+		<FrameLayout
+			android:id="@+id/content_frame"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent">
+
+		</FrameLayout>
+
+	</LinearLayout>
+
+	<!-- Drawer -->
+	<fragment
+		android:id="@+id/fragment_side_menu"
+		android:name="org.kulabukhov.android.apptemplate.fragments.SideMenuFragment"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent">
+		android:layout_height="match_parent"
+		android:layout_gravity="start"
+		android:fitsSystemWindows="true"/>
+	<!--<android.support.design.widget.NavigationView
+		android:id="@+id/navigation"
+		android:layout_width="wrap_content"
+		android:layout_height="match_parent"
+		android:layout_gravity="start"
+		app:menu="@menu/my_navigation_items"/>-->
+</android.support.v4.widget.DrawerLayout>
 
-	</FrameLayout>
+	<!--<LinearLayout
+		xmlns:android="http://schemas.android.com/apk/res/android"
+		xmlns:tools="http://schemas.android.com/tools"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:orientation="vertical">
 
-</LinearLayout>
+		<android.support.v7.widget.Toolbar
+			android:id="@+id/toolbar"
+			android:layout_width="match_parent"
+			android:layout_height="?attr/actionBarSize"
+			style="@style/Widget.App.ActionBar"/>
+
+		<FrameLayout
+			android:id="@+id/content_frame"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent">
+
+		</FrameLayout>
+
+	</LinearLayout>-->
